Additional tests on SmallProblem scoring

--- a/src/test/resources/scoring-test.conf
+++ b/src/test/resources/scoring-test.conf
@@ -29,7 +29,7 @@ gaston: {
 
   persons: [
     {
-      incompatible: ["Bianca"],
+      incompatible: ["Galahad"],
       name: "Albert",
       wishes {
         "Beta": 1,
@@ -48,7 +48,7 @@ gaston: {
         "Eta": 1
       }
       person-wishes {
-        "Albert": 1
+        "Hypatia": 1
       }
     },
     {
