Adds person requirement: minimum number of free slots

--- a/src/test/resources/rendering-test.conf
+++ b/src/test/resources/rendering-test.conf
@@ -1,5 +1,6 @@
 gaston {
   settings {
+    absence-adjustment-factor=0.8
     default-max-persons-per-topic=6
     default-max-topics-per-slot=5
     default-min-persons-per-topic=4
