--- a/src/test-slow/resources/r32023/r32023-tts2.conf
+++ b/src/test-slow/resources/r32023/r32023-tts2.conf
@@ -31,6 +31,18 @@ gaston {
 
   topics = [
     {
+      min = 3
+      max = 6
+      name = "Terraforming Mars"
+      low-priority = true
+    },
+    {
+      min = 3
+      max = 6
+      name = "Dune Imperium"
+      low-priority = true
+    },
+    {
       max = 5
       min = 3
       name = "Alice is missing"
@@ -251,6 +263,7 @@ gaston {
         "Bois Dormant" = 1.0
         "Donjon & Cie" = 1.0
         "Dragonsocks" = 1.0
+        "Terraforming Mars" = 5.0
         "Errants d'Ukiyo" = 1.5
         "Magistrats et Manigances" = 1.0
         "Minuit Nulle Part" = 3.5
@@ -324,6 +337,7 @@ gaston {
         "Remember Tomorrow",
         "Eden in the stars",
         "Soth",
+        "Terraforming Mars",
         "Minuit Nulle Part",
         "The Drinklings",
         "Dragonsocks",
@@ -378,6 +392,7 @@ gaston {
         "Minuit Nulle Part" = 2.0
         "Oracle (GN)" = 1.0
         "Remember Tomorrow" = 3.0
+        "Terraforming Mars" = 5.0
         "Sibérie" = 1.0
         "Sombre: Bleed" = 4.0
         "Soth" = 5.0
@@ -398,6 +413,7 @@ gaston {
         "Sombre: Bleed",
         "Cœur de Pierre",
         "De Mauvais Rêves",
+        "Terraforming Mars"
         "Dragonsocks"
       ]
       name = Elmi
@@ -458,6 +474,7 @@ gaston {
         "Secrets of Cats" = 3.0
         "Sibérie" = 1.0
         "Sombre: Bleed" = 5.0
+        "Terraforming Mars" = 5.0
         "Soth" = 1.0
         "The Drinklings" = 3.0
       }
@@ -519,6 +536,7 @@ gaston {
         "Bienvenue à Beauxbâtons (Harry Potter)" = 5.0
         "Donjon & Cie" = 5.0
         "Dragonsocks" = 5.0
+        "Terraforming Mars" = 5.0
         "Errants d'Ukiyo" = 2.0
         "Lady Blackbird" = 2.0
         "Les Torrents de la Vie" = 2.0
@@ -538,6 +556,7 @@ gaston {
         "Aria",
         "Donjon & Cie",
         "Alice is missing",
+        "Terraforming Mars",
         "Apocalypse World",
         "Sexcraft (GN)",
         "Secrets of Cats",
@@ -598,6 +617,7 @@ gaston {
         "Sexcraft (GN)" = 1.0
         "Sombre: Bleed" = 1.0
         "Toi qui…" = 5.0
+        "Terraforming Mars" = 5.0
         "Trip to Skye - début" = 1.0
       }
     },
@@ -672,6 +692,7 @@ gaston {
         "Cœur de Pierre" = 1.0
         "Donjon & Cie" = 1.0
         "Dragonsocks" = 1.0
+        "Terraforming Mars" = 5.0
         "Errants d'Ukiyo" = 1.0
         "L'appel de Cthulhu: sa majesté des stercoraires" = 1.0
         "Lady Blackbird" = 3.0
@@ -758,6 +779,7 @@ gaston {
         "Minuit Nulle Part" = 1.0
         "Oracle (GN)" = 5.0
         "Secrets of Cats" = 1.0
+        "Terraforming Mars" = 5.0
         "Sexcraft (GN)" = 5.0
         "Sur la face cachée de la lune" = 1.0
         "Synthétiques : Les Voix" = 1.0
@@ -810,8 +832,10 @@ gaston {
         "Aria" = 1.0
         "Au Lycée des corps brisés" = 1.0
         "Bois Dormant" = 5.0
+        "Dune Imperium" = 5.0
         "Donjon & Cie" = 1.0
         "Minuit Nulle Part" = 3.0
+        "Terraforming Mars" = 2.0
         "Remember Tomorrow" = 1.0
         "Sexcraft (GN)" = 3.0
         "Sibérie" = 5.0
