Rename low-priority topics to stopgap

--- a/src/test-slow/resources/r32023/r32023-tts2.conf
+++ b/src/test-slow/resources/r32023/r32023-tts2.conf
@@ -34,13 +34,13 @@ gaston {
       min = 3
       max = 6
       name = "Terraforming Mars"
-      low-priority = true
+      stopgap = true
     },
     {
       min = 3
       max = 6
       name = "Dune Imperium"
-      low-priority = true
+      stopgap = true
     },
     {
       max = 5
