Fix bug, add tests

--- a/src/test/resources/scoring-test.conf
+++ b/src/test/resources/scoring-test.conf
@@ -29,7 +29,7 @@ gaston: {
 
   persons: [
     {
-      incompatible: ["Galahad"],
+      incompatible: ["Galahad", "Ignace"],
       name: "Albert",
       wishes {
         "Beta": 1,
