Adds ability to have exclusive constraints for specific persons

--- a/src/test/resources/rendering-test.conf
+++ b/src/test/resources/rendering-test.conf
@@ -119,6 +119,15 @@ gaston {
           beta,
           gamma
         ]
+      },
+      {
+        inclusions=[
+          hoagie
+        ]
+        topics=[
+          alpha,
+          gamma
+        ]
       }
     ]
     linked=[]
