--- a/src/test-slow/resources/r32025/full.conf
+++ b/src/test-slow/resources/r32025/full.conf
@@ -356,7 +356,7 @@ gaston {
         "Vampire Dark Age" = 2.0
         "Vampire TES" = 1.0
         "Whitechapel" = 4.0
-        "Zombicides (Green Horde OU Dark Side)" = 2.0
+        "Zombicides" = 2.0
         "[De bile et d'acier] Perdu·e dans la montagne" = 1.0
       }
     },
@@ -528,7 +528,7 @@ gaston {
         "Community Radio",
         "Whitechapel",
         Alchimistes,
-        "Zombicides (Green Horde OU Dark Side)",
+        "Zombicides",
         "Ulysse 31",
         "Deathmatch Island",
         "D&D5: Monstres et ce a quoi servent leur corps !",
@@ -614,7 +614,7 @@ gaston {
         "Vampire Dark Age" = 3.0
         "Vampire TES" = 3.0
         "Wester x Mystic GameMaster Emulator" = 1.0
-        "Zombicides (Green Horde OU Dark Side)" = 4.0
+        "Zombicides" = 4.0
         "[De bile et d'acier] Perdu·e dans la montagne" = 4.0
       }
     },
@@ -627,7 +627,7 @@ gaston {
         "Sign (mini-GN)",
         "Whitechapel",
         "Dogs in the Vineyard",
-        "Zombicides (Green Horde OU Dark Side)",
+        "Zombicides",
         "Nebeltahl",
         "Old Friends",
         "L'Insondable",
@@ -730,7 +730,7 @@ gaston {
         "Slay the Spire",
         HeartRunner,
         Alchimistes,
-        "Zombicides (Green Horde OU Dark Side)",
+        "Zombicides",
         "Vampire Dark Age",
         "L'Insondable",
         "Dune: Imperium",
@@ -948,7 +948,7 @@ gaston {
         "Ulysse 31" = 5.0
         "Vampire Dark Age" = 2.0
         Wanderhome = 1.0
-        "Zombicides (Green Horde OU Dark Side)" = 1.0
+        "Zombicides" = 1.0
       }
     },
     {
@@ -1043,7 +1043,7 @@ gaston {
         "Ulysse 31" = 1.0
         Wanderhome = 3.0
         "Wester x Mystic GameMaster Emulator" = 5.0
-        "Zombicides (Green Horde OU Dark Side)" = 3.0
+        "Zombicides" = 3.0
         "[De bile et d'acier] Perdu·e dans la montagne" = 2.0
       }
     },
@@ -1057,7 +1057,7 @@ gaston {
         Alchimistes,
         "Dogs in the Vineyard",
         Slugblaster,
-        "Zombicides (Green Horde OU Dark Side)",
+        "Zombicides",
         "Stalker AnomalYZE : roadside picnic",
         "Old Friends",
         "Citizen Sleeper"
@@ -1190,7 +1190,7 @@ gaston {
         "Vampire Dark Age" = 1.0
         Wanderhome = 3.0
         "Wester x Mystic GameMaster Emulator" = 1.0
-        "Zombicides (Green Horde OU Dark Side)" = 2.0
+        "Zombicides" = 2.0
       }
     },
     {
@@ -1235,7 +1235,7 @@ gaston {
         "Vampire TES" = 1.0
         Wanderhome = 1.0
         "Wester x Mystic GameMaster Emulator" = 2.0
-        "Zombicides (Green Horde OU Dark Side)" = 1.0
+        "Zombicides" = 1.0
       }
     },
     {
@@ -1336,7 +1336,7 @@ gaston {
         "Toutes petites aventures" = 1.0
         "Vampire Dark Age" = 2.0
         "Wester x Mystic GameMaster Emulator" = 3.0
-        "Zombicides (Green Horde OU Dark Side)" = 2.0
+        "Zombicides" = 2.0
       }
     },
     {
@@ -1406,7 +1406,7 @@ gaston {
         Alchimistes,
         "Wester x Mystic GameMaster Emulator",
         Scythe,
-        "Zombicides (Green Horde OU Dark Side)",
+        "Zombicides",
         "Nebeltahl",
         "La Porte de la mer Languide",
         "Stalker AnomalYZE : roadside picnic",
@@ -1466,7 +1466,7 @@ gaston {
         Alchimistes,
         "Dogs in the Vineyard",
         Scythe,
-        "Zombicides (Green Horde OU Dark Side)",
+        "Zombicides",
         "Segmentation (GN)",
         "Nebeltahl",
         "[De bile et d'acier] Perdu·e dans la montagne",
@@ -1538,8 +1538,7 @@ gaston {
       mandatory = [
         "Fallen London",
         Slugblaster,
-        "Citizen Sleeper",
-        "Stalker AnomalYZE : roadside picnic"
+        "Citizen Sleeper"
       ]
       name = Tilleul
       person-wishes {}
@@ -1616,7 +1615,7 @@ gaston {
         "Fallen London",
         "Dogs in the Vineyard",
         Scythe,
-        "Zombicides (Green Horde OU Dark Side)",
+        "Zombicides",
         "Vampire Dark Age",
         "Périls & Princesses",
         "Ulysse 31",
@@ -1679,7 +1678,7 @@ gaston {
         "Dogs in the Vineyard",
         "Toutes petites aventures",
         Scythe,
-        "Zombicides (Green Horde OU Dark Side)",
+        "Zombicides",
         "Nebeltahl",
         "L'Insondable",
         "Monsters and Other Childish Things",
@@ -1745,7 +1744,7 @@ gaston {
         "Dogs in the Vineyard",
         "Wester x Mystic GameMaster Emulator",
         Scythe,
-        "Zombicides (Green Horde OU Dark Side)",
+        "Zombicides",
         "Segmentation (GN)",
         "Nebeltahl",
         Celestopol,
@@ -1799,7 +1798,7 @@ gaston {
         "Dune: Imperium",
         Alchimistes,
         Scythe,
-        "Zombicides (Green Horde OU Dark Side)",
+        "Zombicides",
         "Segmentation (GN)",
         "L'Insondable"
       ]
@@ -1883,7 +1882,7 @@ gaston {
   constraints {
     exclusive = [
       { topics = ["Chamonix Sentinelles", "Celestopol"] }, // Demande Shyria: masteriser une seule partie
-      { topics = [ "D&D5: Monstres et ce a quoi servent leur corps !", "La Porte de la mer Languide", "Monsters and Other Childish Things", "Nebeltahl", "Whitechapel" ], inclusions = "Chloé" } // Demande Chloé: max une seule multi-créneau
+      { topics = [ "D&D5: Monstres et ce a quoi servent leur corps !", "La Porte de la mer Languide", "Monsters and Other Childish Things", "Nebeltahl", "Whitechapel" ], inclusions = [ "Chloé" ] } // Demande Chloé: max une seule multi-créneau
     ]
     linked = []
     not-simultaneous = []
