Fix broken slots

--- a/src/test-slow/resources/r32025/table.conf
+++ b/src/test-slow/resources/r32025/table.conf
@@ -36,13 +36,13 @@ gaston {
 
   slots = [
     [
-      {name = "1 - jeudi aprèm"}
+      {name = "1 - jeudi aprèm"},
       {name = "2 - jeudi soir"}
-    ][
-      {name = "3 - vendredi aprèm"}
+    ],[
+      {name = "3 - vendredi aprèm"},
       {name = "4 - vendredi soir"}
-    ][
-      {name = "5 - samedi aprèm"}
+    ],[
+      {name = "5 - samedi aprèm"},
       {name = "6 - samedi soir"}
     ]
   ]
