--- a/src/test-slow/resources/r32025/full.conf
+++ b/src/test-slow/resources/r32025/full.conf
@@ -590,7 +590,9 @@ gaston {
       ]
       incompatible = []
       mandatory = [
-        "Toi qui"
+        "Toi qui",
+        "Wanderhome",
+        "Toutes petites aventures"
       ]
       name = Deryn
       person-wishes {}
@@ -741,7 +743,7 @@ gaston {
         "Citizen Sleeper"
       ]
       incompatible = []
-      mandatory = []
+      mandatory = ["Bienvenue à Poudlard"]
       name = Fanny
       person-wishes {}
       weight = 1.0
@@ -1203,7 +1205,8 @@ gaston {
       incompatible = []
       mandatory = [
         "Syntthétiques: Les Voix",
-        "Périls & Princesses"
+        "Périls & Princesses",
+        "Segmentation (GN)"
       ]
       name = Pacman
       person-wishes {}
@@ -1580,7 +1583,9 @@ gaston {
         "Cyberpunk Red"
       ]
       incompatible = []
-      mandatory = []
+      mandatory = [
+        "Segmentation (GN)"
+      ]
       name = Tiramisù
       person-wishes {}
       weight = 1.0
