--- a/src/test-slow/resources/r32025/full.conf
+++ b/src/test-slow/resources/r32025/full.conf
@@ -847,19 +847,19 @@ gaston {
       wishes {
         Alchimistes = 1.0
         "Bienvenue à Poudlard" = 1.0
-        "Brindlewood Bay" = 5.0
+        "Brindlewood Bay" = 10.0
         Celestopol = 1.0
         "Community Radio" = 1.0
-        "Data Police" = 5.0
+        "Data Police" = 10.0
         "Dune: Imperium" = 1.0
         HeartRunner = 1.0
         "L'Insondable" = 1.0
         "Les Errants d'Ukyo" = 1.0
         Myrmes = 1.0
         "Pack Horse Library" = 1.0
-        "Périls & Princesses" = 2.0
+        "Périls & Princesses" = 5.0
         Slugblaster = 1.0
-        "Syntthétiques: Les Voix" = 5.0
+        "Syntthétiques: Les Voix" = 10.0
         "Vampire TES" = 5.0
       }
     },
@@ -1128,6 +1128,7 @@ gaston {
       person-wishes {}
       weight = 1.0
       wishes {
+        "Whitechapel" = -1.0
         "Brindlewood Bay" = 1.0
         "Data Police" = 1.0
         HeartRunner = 3.0
