Slots constraints on topics

--- a/src/test-slow/resources/r32025/full.conf
+++ b/src/test-slow/resources/r32025/full.conf
@@ -47,6 +47,7 @@ gaston {
       max = 5
       min = 3
       name = "Brindlewood Bay"
+      slots = [ "2 - jeudi soir", "4 - vendredi soir", "6 - samedi soir" ]
     },
     {
       max = 5
@@ -88,6 +89,7 @@ gaston {
       max = 5
       min = 4
       name = "Deathmatch Island"
+      slots = [ "2 - jeudi soir", "4 - vendredi soir", "6 - samedi soir" ]
     },
     {
       max = 4
@@ -135,6 +137,7 @@ gaston {
       max = 5
       min = 4
       name = "Magna Veritas"
+      slots = [ "2 - jeudi soir", "4 - vendredi soir", "6 - samedi soir" ]
     },
     {
       max = 4
@@ -177,6 +180,7 @@ gaston {
       max = 11
       min = 11
       name = "Segmentation (GN)"
+      slots = [ "2 - jeudi soir", "4 - vendredi soir", "6 - samedi soir" ]
     },
     {
       max = 7
