Fix board games

--- a/src/test-slow/resources/r32025/full.conf
+++ b/src/test-slow/resources/r32025/full.conf
@@ -255,36 +255,42 @@ gaston {
       min = 2
       name = Alchimistes
       stopgap = true
+      occurrences = 2
     },
     {
       max = 4
       min = 2
       name = "Dune: Imperium"
       stopgap = true
+      occurrences = 2
     },
     {
       max = 6
-      min = 3
+      min = 4
       name = "L'Insondable"
       stopgap = true
+      occurrences = 2
     },
     {
       max = 4
       min = 2
       name = Myrmes
       stopgap = true
+      occurrences = 2
     },
     {
       max = 5
       min = 2
       name = Scythe
       stopgap = true
+      occurrences = 2
     },
     {
       max = 4
-      min = 1
+      min = 2
       name = "Slay the Spire"
       stopgap = true
+      occurrences = 2
     },
     {
       max = 5
@@ -297,6 +303,7 @@ gaston {
       min = 2
       name = "Zombicides"
       stopgap = true
+      occurrences = 2
     }
   ]
 
