Add missing mandatory person

--- a/src/test-slow/resources/r32025/full.conf
+++ b/src/test-slow/resources/r32025/full.conf
@@ -1545,7 +1545,6 @@ gaston {
         "Vampire Dark Age",
         "La Porte de la mer Languide",
         "Les Errants d'Ukyo",
-        "Stalker AnomalYZE : roadside picnic",
         "Cyberpunk Red",
         "Old Friends"
       ]
@@ -1553,7 +1552,8 @@ gaston {
       mandatory = [
         "Fallen London",
         Slugblaster,
-        "Citizen Sleeper"
+        "Citizen Sleeper",
+        "Stalker AnomalYZE : roadside picnic"
       ]
       name = Tilleul
       person-wishes {}
