--- a/src/test-slow/resources/r32025/full.conf
+++ b/src/test-slow/resources/r32025/full.conf
@@ -77,12 +77,6 @@ gaston {
     {
       max = 5
       min = 3
-      name = "D&D5: Monstres et ce a quoi servent leur corps !"
-      duration = 2
-    },
-    {
-      max = 5
-      min = 3
       name = "Data Police"
     },
     {
@@ -314,7 +308,6 @@ gaston {
       forbidden = [
         "Ulysse 31",
         "Pack Horse Library",
-        "D&D5: Monstres et ce a quoi servent leur corps !",
         Myrmes,
         Alchimistes,
         Scythe,
@@ -387,7 +380,6 @@ gaston {
         "Périls & Princesses",
         "Ulysse 31",
         "Deathmatch Island",
-        "D&D5: Monstres et ce a quoi servent leur corps !",
         Microscope,
         "Wester x Mystic GameMaster Emulator",
         "Toutes petites aventures"
@@ -438,7 +430,6 @@ gaston {
         "Sign (mini-GN)",
         "Dune: Imperium",
         "Secrets of Éon",
-        "D&D5: Monstres et ce a quoi servent leur corps !",
         Microscope,
         "Brindlewood Bay",
         "Whitechapel",
@@ -489,7 +480,6 @@ gaston {
       forbidden = [
         "Ulysse 31",
         "Pack Horse Library",
-        "D&D5: Monstres et ce a quoi servent leur corps !",
         "Bienvenue à Poudlard",
         HeartRunner,
         "Brindlewood Bay",
@@ -542,7 +532,6 @@ gaston {
         "Zombicides",
         "Ulysse 31",
         "Deathmatch Island",
-        "D&D5: Monstres et ce a quoi servent leur corps !",
         Microscope,
         "Monsters and Other Childish Things",
         Myrmes,
@@ -596,7 +585,6 @@ gaston {
         "Périls & Princesses",
         "Ulysse 31",
         "Deathmatch Island",
-        "D&D5: Monstres et ce a quoi servent leur corps !",
         Microscope
       ]
       incompatible = []
@@ -644,7 +632,6 @@ gaston {
         "Nebeltahl",
         "Old Friends",
         "L'Insondable",
-        "D&D5: Monstres et ce a quoi servent leur corps !",
         Microscope
       ]
       incompatible = []
@@ -684,7 +671,6 @@ gaston {
       base-score = 0.0
       forbidden = [
         "Chamonix Sentinelles",
-        "D&D5: Monstres et ce a quoi servent leur corps !",
         "Data Police",
         "Magna Veritas",
         Alchimistes,
@@ -737,7 +723,6 @@ gaston {
       base-score = 0.0
       forbidden = [
         "Vampire TES",
-        "D&D5: Monstres et ce a quoi servent leur corps !",
         Myrmes,
         "Data Police",
         "Slay the Spire",
@@ -798,7 +783,6 @@ gaston {
         "Périls & Princesses",
         "Ulysse 31",
         "Deathmatch Island",
-        "D&D5: Monstres et ce a quoi servent leur corps !",
         Microscope
       ]
       incompatible = []
@@ -838,7 +822,6 @@ gaston {
       base-score = 0.0
       forbidden = [
         "[De bile et d'acier] Perdu·e dans la montagne",
-        "D&D5: Monstres et ce a quoi servent leur corps !",
         "Monsters and Other Childish Things",
         "Sign (mini-GN)",
         "Whitechapel",
@@ -880,7 +863,6 @@ gaston {
       base-score = 0.0
       forbidden = [
         "[De bile et d'acier] Perdu·e dans la montagne",
-        "D&D5: Monstres et ce a quoi servent leur corps !",
         Myrmes,
         "Whitechapel",
         "Fallen London",
@@ -1013,9 +995,7 @@ gaston {
         "Vampire Dark Age"
       ]
       incompatible = []
-      mandatory = [
-        "D&D5: Monstres et ce a quoi servent leur corps !"
-      ]
+      mandatory = []
       name = Michael
       person-wishes {}
       weight = 1.0
@@ -1117,7 +1097,6 @@ gaston {
         Slugblaster,
         "Périls & Princesses",
         "Ulysse 31",
-        "D&D5: Monstres et ce a quoi servent leur corps !",
         Microscope,
         "Dogs in the Vineyard",
         "Secrets of Éon",
@@ -1259,7 +1238,6 @@ gaston {
       forbidden = [
         "Chamonix Sentinelles",
         "[De bile et d'acier] Perdu·e dans la montagne",
-        "D&D5: Monstres et ce a quoi servent leur corps !",
         "Monsters and Other Childish Things",
         HeartRunner,
         "Sign (mini-GN)",
@@ -1304,7 +1282,6 @@ gaston {
       forbidden = [
         "Ulysse 31",
         "Pack Horse Library",
-        "D&D5: Monstres et ce a quoi servent leur corps !",
         "Data Police",
         "Magna Veritas",
         "Sign (mini-GN)",
@@ -1375,7 +1352,6 @@ gaston {
         "Ulysse 31",
         "Aventure(s) au Pays des Merveilles",
         "[De bile et d'acier] Perdu·e dans la montagne",
-        "D&D5: Monstres et ce a quoi servent leur corps !",
         Microscope,
         "Wester x Mystic GameMaster Emulator",
         "Toutes petites aventures",
@@ -1427,7 +1403,6 @@ gaston {
         "Stalker AnomalYZE : roadside picnic",
         "Périls & Princesses",
         "Ulysse 31",
-        "D&D5: Monstres et ce a quoi servent leur corps !",
         Microscope
       ]
       incompatible = []
@@ -1532,7 +1507,6 @@ gaston {
       forbidden = [
         "Tu ne tairas point",
         "[De bile et d'acier] Perdu·e dans la montagne",
-        "D&D5: Monstres et ce a quoi servent leur corps !",
         "Monsters and Other Childish Things",
         "Bienvenue à Poudlard",
         "Magna Veritas",
@@ -1638,7 +1612,6 @@ gaston {
         "Ulysse 31",
         "Aventure(s) au Pays des Merveilles",
         "Vampire TES",
-        "D&D5: Monstres et ce a quoi servent leur corps !",
         Microscope,
         "Monsters and Other Childish Things",
         Myrmes,
@@ -1722,7 +1695,6 @@ gaston {
         "Chamonix Sentinelles" = 2.0
         "Citizen Sleeper" = 2.0
         "Community Radio" = 3.0
-        "D&D5: Monstres et ce a quoi servent leur corps !" = 1.0
         "Data Police" = 3.0
         "Deathmatch Island" = 4.0
         "Donjon & Cie" = 1.0
@@ -1753,7 +1725,6 @@ gaston {
       absences = ["1 - jeudi aprèm"]
       base-score = 0.0
       forbidden = [
-        "D&D5: Monstres et ce a quoi servent leur corps !",
         Myrmes,
         "Data Police",
         "Slay the Spire",
@@ -1845,7 +1816,6 @@ gaston {
       base-score = 0.0
       forbidden = [
         "Périls & Princesses",
-        "D&D5: Monstres et ce a quoi servent leur corps !",
         "Stalker AnomalYZE : roadside picnic"
       ]
       incompatible = []
@@ -1899,7 +1869,7 @@ gaston {
   constraints {
     exclusive = [
       { topics = ["Chamonix Sentinelles", "Celestopol"] }, // Demande Shyria: masteriser une seule partie
-      { topics = [ "D&D5: Monstres et ce a quoi servent leur corps !", "La Porte de la mer Languide", "Monsters and Other Childish Things", "Nebeltahl", "Whitechapel" ], inclusions = [ "Chloé" ] } // Demande Chloé: max une seule multi-créneau
+      { topics = [ "La Porte de la mer Languide", "Monsters and Other Childish Things", "Nebeltahl", "Whitechapel" ], inclusions = [ "Chloé" ] } // Demande Chloé: max une seule multi-créneau
     ]
     linked = []
     not-simultaneous = []
