Adds constraint: limited number among a set of topics

--- a/src/test-slow/resources/r32025/full.conf
+++ b/src/test-slow/resources/r32025/full.conf
@@ -1874,6 +1874,9 @@ gaston {
     linked = []
     not-simultaneous = []
     simultaneous = []
+    limited-count = [
+      { topics = [ "Fallen London", Slugblaster, "Citizen Sleeper", "Stalker AnomalYZE : roadside picnic" ], count = 3 }
+    ]
   }
 }
 
