--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,33 @@
+### Scala ###
 *.class
 *.log
 
-# sbt specific
-.bloop
-.cache
-.history
-.lib/
+# sbt
 dist/*
 target/
 lib_managed/
 src_managed/
-project/boot/
-project/plugins/project/
-project/**/target
+project/target/
+project/project/target/
+.history
+.cache
+.lib
 
-# BSP
+# Bloop/Metals/BSP
+.bloop
 .bsp
-
-# Metals
 .metals
 project/metals.sbt
 project/**/metals.sbt
 
-# Scala-IDE specific
-.scala_dependencies
-.worksheet
 
-# IntelliJ specific
-.idea
+### Intellij ###
+# Ignore everything except formatting configuration
+.idea/*
+!.idea/codeStyles
+.idea/codeStyles/*
+!.idea/codeStyles/Project.xml
 
-# VSCode specific
+
+### VS Code ###
 .vscode
