fix coderabbit config

--- a/.coderabbit.yml
+++ b/.coderabbit.yml
@@ -1,2 +1,3 @@
 tone_instructions: "Adopt a concise, matter-of-fact style that gets straight to the point without unnecessary pleasantries."
-poem: false
+reviews:
+  poem: false
